--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,10 +4,10 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if number % 2 == 0 -%}
+    {%- if number is divisibleby 2 %}
         <H1>Number: {{ number }} is even</H1>
-	    {% else -%}
-	    <H1>Number: {{ number }} is odd</H1>
-	    {%- endif -%}
+    {%- else %}
+        <H1>Number: {{ number }} is odd</H1>
+    {%- endif %}
     </BODY>
 </HTML>
